@@ -1,6 +1,11 @@
 devel
 -----
 
+* For Windows builds, remove the defines `_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS`
+  and `_ENABLE_ATOMIC_ALIGNMENT_FIX` that were needed to build Boost components
+  with MSVC in older versions of Boost and MSVC.
+  Both of these defines are obsolete nowadays.
+
 * Database initial sync considers document count on leader for
   estimating timeouts when over 1 million docs on leader.
 
